[package]
name = "testcontainers-redpanda-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Unofficial redpanda test container"
homepage = "http://github.com/milenkovicm/testcontainers-redpanda-rs"
repository = "http://github.com/milenkovicm/testcontainers-redpanda-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["testcontainers", "testing", "kafka", "redpanda", "integration-testing"]

[dependencies]
log = "0.4"
testcontainers = "0.15"


[dev-dependencies]
env_logger = "0.10"
rdkafka = { version = "0.36", features = ["cmake-build"] }
rusty_ulid = "2.0"
tokio = { version = "1", features = ["rt", "macros"]}