[package]
name = "testcontainers-redpanda-rs"
version = "0.11.0"
edition = "2024"
license = "MIT"
description = "Unofficial redpanda test container"
homepage = "https://github.com/milenkovicm/testcontainers-redpanda-rs"
repository = "https://github.com/milenkovicm/testcontainers-redpanda-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["testcontainers", "testing", "kafka", "redpanda", "integration-testing"]
rust-version = "1.85.1"

[dependencies]
log = "0.4"
testcontainers = { version = "0.25" }

[dev-dependencies]
env_logger = "0.11"
rdkafka = { version = "0.38" }
rusty_ulid = "2.0"
tokio = { version = "1", features = ["rt", "macros"]}
ctor = { version = "0.4" }
serial_test = { version = "3.1" }
reqwest = { version = "0.12" }
